# webbrot

./: Cargo.toml  README.md  index.html  input.css
src/: colormaps.rs  lib.rs  main.rs  options.rs
