[package]
name = "webbrot"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.22.1", default-features = false }
fastrand = { version = "2.2.0", features = ["js"], default-features = false }
image = { version = "0.25.5", default-features = false, features = ["png"] }
leptos = { version = "0.6.15", default-features = false, features = ["csr"] }
num = "0.4.3"
rayon = "1.10.0"


[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
incremental = false
debug = false
